Implementando agenda de eventos

--- a/sca-frontend/package.json
+++ b/sca-frontend/package.json
@@ -21,12 +21,14 @@
     "@angular/platform-browser-dynamic": "~9.1.7",
     "@angular/router": "~9.1.7",
     "@fortawesome/fontawesome-free": "^5.13.0",
+    "@fullcalendar/bootstrap": "^4.1.0",
+    "@fullcalendar/core": "^4.4.2",
+    "@fullcalendar/daygrid": "^4.4.2",
     "@fullcalendar/interaction": "^4.4.2",
-    "angular-calendar": "^0.28.16",
-    "angularx-flatpickr": "^6.3.1",
+    "@fullcalendar/list": "^4.4.2",
+    "@fullcalendar/timegrid": "^4.4.2",
     "bootstrap": "^4.5.0",
     "date-fns": "^2.14.0",
-    "flatpickr": "^4.6.3",
     "leaflet": "^1.6.0",
     "ngx-toastr": "^12.1.0",
     "primeflex": "^1.1.1",
