--- a/sca-frontend/angular.json
+++ b/sca-frontend/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "angular-base": {
+    "sca-frontend": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/angular-base",
+            "outputPath": "dist/sca-frontend",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -78,18 +78,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "angular-base:build"
+            "browserTarget": "sca-frontend:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "angular-base:build:production"
+              "browserTarget": "sca-frontend:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "angular-base:build"
+            "browserTarget": "sca-frontend:build"
           }
         },
         "test": {
@@ -127,16 +127,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "angular-base:serve"
+            "devServerTarget": "sca-frontend:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "angular-base:serve:production"
+              "devServerTarget": "sca-frontend:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "angular-base"
+  "defaultProject": "sca-frontend"
 }
