iniciando com rabbitmq

--- a/_01-api-cadastro-ativos/settings.toml
+++ b/_01-api-cadastro-ativos/settings.toml
@@ -1,5 +1,6 @@
 [default]
 DEBUG = false
+RABBITMQ_URI='amqp://guest:guest@172.17.0.2:5672/%2F'
 SQLALCHEMY_DATABASE_URI = 'postgresql://postgres:12345678@172.18.0.2/mod1_ativos'
 SQLALCHEMY_TRACK_MODIFICATIONS = false
 SECRET_KEY = ''
